# Akranoid

./: README.md
Arkanoid/: CMakeLists.txt
Arkanoid/Include/: ball.h  brick.h  paddle.h
Arkanoid/src/: Arkanoid.cpp  Arkanoid.h  Item.h  brick.cpp  main.cpp  paddle.cpp
